crates/service/tests/completion/snapshots/features__completion__tag__catch.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag)"
  },
  {
    "label": "$e",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag $e)"
  }
]
