crates/service/tests/completion/snapshots/features__completion__tag__catch_incomplete.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag)",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 21
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$e",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag $e)",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 21
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "newText": "$e"
    }
  }
]
