crates/service/tests/completion/snapshots/features__completion__tag__deprecated.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "tags": [
      1
    ],
    "detail": "(tag)"
  },
  {
    "label": "$e",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "tags": [
      1
    ],
    "detail": "(tag $e)"
  }
]
