crates/service/tests/completion/snapshots/features__completion__tag__extern_type.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "type",
    "kind": 14
  },
  {
    "label": "param",
    "kind": 14
  },
  {
    "label": "result",
    "kind": 14
  }
]
