crates/service/tests/completion/snapshots/features__completion__tag__module_field_incomplete.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "import",
    "kind": 14
  },
  {
    "label": "export",
    "kind": 14
  },
  {
    "label": "type",
    "kind": 14
  },
  {
    "label": "param",
    "kind": 14
  },
  {
    "label": "result",
    "kind": 14
  }
]
