crates/service/tests/completion/snapshots/features__completion__tag__throw.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6
  },
  {
    "label": "$e",
    "kind": 6
  }
]
