crates/service/tests/completion/snapshots/features__completion__tag__throw_before_label.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 12
        },
        "end": {
          "line": 6,
          "character": 13
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$e",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 12
        },
        "end": {
          "line": 6,
          "character": 13
        }
      },
      "newText": "$e"
    }
  }
]
