crates/service/tests/completion/snapshots/features__completion__tag__throw_incomplete.snap
---
source: crates/service/tests/completion/tag.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag)",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 13
        },
        "end": {
          "line": 6,
          "character": 14
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$e",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag $e)",
    "textEdit": {
      "range": {
        "start": {
          "line": 6,
          "character": 13
        },
        "end": {
          "line": 6,
          "character": 14
        }
      },
      "newText": "$e"
    }
  }
]
